# Enterprise-Data-Platform-Web-App

./: .env.example  .gitignore  Makefile  PROJECT_PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml
docker/api/: Dockerfile
docker/oracle/init/: 01_schema.sql
docker/worker/: Dockerfile
sample_data/: customers.csv  customers_with_errors.csv  orders.csv
src/: __init__.py
src/api/: config.py  dependencies.py  main.py  schemas.py
src/api/routes/: auth.py  data.py  jobs.py  pages.py  reports.py
src/core/: __init__.py  database.py  security.py
src/services/: ingest.py  load.py  validate.py
src/workers/: celery_app.py
src/workers/tasks/: cleanup_tasks.py  etl_tasks.py  report_tasks.py
templates/: base.html  dashboard.html  files.html  jobs.html  login.html  reports.html  upload.html
tests/: __init__.py  conftest.py
tests/integration/: test_api.py
tests/unit/: test_auth.py  test_ingest.py  test_validation.py
